<resources>
    <string name="app_name">StudentPerformanceManagement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="classinfromation">教学班信息</string>
    <string name="ID">学号：</string>
    <string name="name">姓名:</string>
    <string name="putId">请输入学生的学号</string>
    <string name="putName">请输入学生的姓名</string>
    <string name="Grade">平时成绩</string>
    <string name="midGrade">期中成绩</string>
    <string name="FinGrade">期末成绩</string>
    <string name="DG">倒序排序</string>
    <string name="G">成绩排序</string>
</resources>
